<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dashboard.profile.ProfileFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/et_rounded"
        android:gravity="start"
        android:lineHeight="20dp"
        android:padding="8dp"
        android:textSize="12sp"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/et_rounded"
        android:gravity="start"
        android:lineHeight="20dp"
        android:padding="8dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_fruit"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullname"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/et_fullname"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/et_rounded"
        android:gravity="start"
        android:lineHeight="20dp"
        android:padding="8dp"
        android:textSize="12sp"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/et_rounded"
        android:gravity="start"
        android:lineHeight="20dp"
        android:padding="8dp"
        android:textSize="12sp"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/et_rounded"
        android:gravity="start"
        android:lineHeight="20dp"
        android:padding="8dp"
        android:textSize="12sp"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/et_old_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/et_rounded"
        android:gravity="start"
        android:lineHeight="20dp"
        android:padding="8dp"
        android:textSize="12sp"
        tools:ignore="UnusedAttribute" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/primary_blue" />





</LinearLayout>