<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.home.buyer.DetailBuyerActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/divHeader"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="0dp"
        android:background="@color/primary_blue"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0sp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:paddingBottom="2dp"
                android:src="@drawable/ic_left_back"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="DETAIL PRODUK"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/image_fruit"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:contentDescription="@string/home"
        android:scaleType="centerCrop"
        android:transitionName="story_image"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"
        >

        <TextView
            android:id="@+id/tv_price_buyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rp. 50.000"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:background="@drawable/bg_textfield_accent"
            android:text="@string/add_to_cart"
            android:textAlignment="center"
            android:textSize="12sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/primary_blue"
            tools:ignore="MissingConstraints,RtlCompat" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_bg"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded"
            android:paddingHorizontal="30dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/quality"

            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_fruit_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="291dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="Fruit Type" />

        <TextView
            android:id="@+id/text_fruit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fruit_type"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/primary_blue"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="Apel" />

        <TextView
            android:id="@+id/text_name_seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fruit_name"
            android:layout_marginStart="30dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="Windah" />

        <TextView
            android:id="@+id/text_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_name_seller"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="start|end"
            android:text="@string/placeholder_text" />


    </RelativeLayout>



</LinearLayout>